Update html and css

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kezdőlap</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Üdvözöljük a Magyar Fight Shopban!</h1>
-    <a href="/login">Bejelentkezés</a>
-    <a href="/register">Regisztráció</a>
+    <header>
+        <div class="container">
+            <h1>Magyar Fight Shop</h1>
+        </div>
+    </header>
+    <main>
+        <div class="index-container">
+            <h2>Üdvözöljük a Magyar Fight Shopban!</h2>
+            <p>Bejelentkezéshez vagy regisztrációhoz kattintson az alábbi gombok egyikére.</p>
+            <a href="login.html" class="button">Bejelentkezés</a>
+            <a href="register.html" class="button">Regisztráció</a>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Magyar Fight Shop</p>
+    </footer>
 </body>
 </html>
