--- a/public/hiba.html
+++ b/public/hiba.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiba</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script>
+        function countdown() {
+            let counter = 5;
+            const interval = setInterval(() => {
+                document.getElementById('countdown').innerText = counter;
+                counter--;
+                if (counter < 0) {
+                    clearInterval(interval);
+                    window.location.href = 'index.html';
+                }
+            }, 1000);
+        }
+        window.onload = countdown;
+    </script>
 </head>
 <body>
-    <h1>Hibás bejelentkezés</h1>
-    <p>Hibás felhasználónév vagy jelszó. Kérjük, próbálja újra.</p>
-    <a href="/login">Vissza a bejelentkezéshez</a>
+    <header>
+        <div class="container">
+            <h1>Magyar Fight Shop</h1>
+        </div>
+    </header>
+    <main>
+        <div class="error-container">
+            <h2>Hiba történt!</h2>
+            <p>Hibás felhasználónév, jelszó, vagy a felhasználónév/email már létezik.</p>
+            <p>Ön 5 másodperc múlva vissza lesz irányítva a kezdőlapra. Visszaszámlálás: <span id="countdown">5</span></p>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Magyar Fight Shop</p>
+    </footer>
 </body>
 </html>
