--- a/public/login.html
+++ b/public/login.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bejelentkezés</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Bejelentkezés</h1>
-    <form action="/login" method="POST">
-        <label for="username">Felhasználónév:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Jelszó:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Bejelentkezés</button>
-    </form>
+    <header>
+        <div class="container">
+            <h1>Bejelentkezés</h1>
+        </div>
+    </header>
+    <main>
+        <div class="form-container">
+            <div class="form-box">
+                <h2>Bejelentkezés</h2>
+                <form action="/login" method="POST">
+                    <label for="username">Felhasználónév:</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="password">Jelszó:</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Bejelentkezés</button>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Magyar Fight Shop</p>
+    </footer>
 </body>
 </html>
