--- a/public/register.html
+++ b/public/register.html
@@ -4,20 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regisztráció</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Regisztráció</h1>
-    <form action="/register" method="POST">
-        <label for="username">Felhasználónév:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Jelszó:</label>
-        <input type="password" id="password" name="password" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="birth">Születési dátum:</label>
-        <input type="date" id="birth" name="birth" required>
-        <button type="submit">Regisztráció</button>
-    </form>
+    <header>
+        <div class="container">
+            <h1>Regisztráció</h1>
+        </div>
+    </header>
+    <main>
+        <div class="form-container">
+            <div class="form-box">
+                <h2>Regisztráció</h2>
+                <form action="/register" method="POST">
+                    <label for="username">Felhasználónév:</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="password">Jelszó:</label>
+                    <input type="password" id="password" name="password" required>
+                    <label for="birth">Születési dátum:</label>
+                    <input type="date" id="birth" name="birth" required>
+                    <button type="submit">Regisztráció</button>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Magyar Fight Shop</p>
+    </footer>
 </body>
 </html>
