Revert "Update" edit This reverts commit 37481843a0d1beb4b5ad97dfd7dadee44f827898.

--- a/public/login.html
+++ b/public/login.html
@@ -9,18 +9,18 @@
 <body>
     <header>
         <div class="container">
-            <h1>Magyar Fight Shop</h1>
+            <h1>Bejelentkezés</h1>
         </div>
     </header>
     <main>
         <div class="form-container">
-            <div class="form-box" id="login-form">
+            <div class="form-box">
                 <h2>Bejelentkezés</h2>
-                <form action="/login" method="post">
-                    <label for="login-username">Felhasználónév:</label>
-                    <input type="text" id="login-username" name="username" required>
-                    <label for="login-password">Jelszó:</label>
-                    <input type="password" id="login-password" name="password" required>
+                <form action="/login" method="POST">
+                    <label for="username">Felhasználónév:</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="password">Jelszó:</label>
+                    <input type="password" id="password" name="password" required>
                     <button type="submit">Bejelentkezés</button>
                 </form>
             </div>
