--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kezdőlap</title>
+    <title>Magyar Fight Shop</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,10 +14,12 @@
     </header>
     <main>
         <div class="index-container">
-            <h2>Üdvözöljük a Magyar Fight Shopban!</h2>
-            <p>Bejelentkezéshez vagy regisztrációhoz kattintson az alábbi gombok egyikére.</p>
-            <a href="login.html" class="button">Bejelentkezés</a>
-            <a href="register.html" class="button">Regisztráció</a>
+            <div class="form-box">
+                <h2>Üdvözöljük</h2>
+                <p>Kérjük, válasszon a következő lehetőségek közül:</p>
+                <button class="main-button" onclick="location.href='login.html'">Bejelentkezés</button>
+                <button class="main-button" onclick="location.href='register.html'">Regisztráció</button>
+            </div>
         </div>
     </main>
     <footer>
