--- a/public/webshop.html
+++ b/public/webshop.html
@@ -47,7 +47,7 @@
             <h1>Magyar Fight Shop</h1>
             <div class="cart-icon">
                 <a href="cart.html">
-                    <img src="cart.png" alt="Cart" />
+                    <img src="https://static.vecteezy.com/system/resources/previews/027/381/351/original/shopping-cart-icon-shopping-trolley-icon-shopping-cart-logo-container-for-goods-and-products-economics-symbol-design-elements-basket-symbol-silhouette-retail-design-elements-vector.jpg" alt="Cart" />
                 </a>
             </div>
         </div>
